--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 </div>
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
